package NYT.NSecurityClient.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqTransferQuota
{
    required string src_account = 1;
    required bytes resource_delta = 2;
}

message TRspTransferQuota
{ }

////////////////////////////////////////////////////////////////////////////////
